Adding Daily Summaries create API call
